<resources>
    <string name="profile_gender" translatable="false">profile_gender</string>
    <string name="profile_gender_values" translatable="false">profile_gender_values</string>
    <string name="edit_notification_item_name">Edit</string>
    <string name="edit_notification_delete_item">Delete</string>
    <string name="add_new_notification_dialog_title">Add name</string>
    <string name="add_new_notification_dialog_hint_content">Input name</string>
    <string name="new_nt_def_name">name</string>
    <string name="new_nt_select_color">Choose color</string>
    <string name="notification_def_name">Red</string>
    <string name="unit_length">mi</string>
    <string name="unit_cal">kcal</string>
    <string name="lunar_steps_percentage">of goal</string>
    <string name="home_time_home_city_name" translatable="false">Getting location.. </string>
    <string name="permission_location_message">We need your location to search for your LunaR and to determine the sunset and sunrise time</string>
    <string name="my_watch_firmwer_version">Version </string>
    <string name="def_alarm_name">Alarm</string>
    <string name="sunrise_activity_toolbar_title">Sunset Sunrise</string>
    <string name="my_watch_firmwer_version_describe">\" is now available for your LunaR!</string>
    <string name="app_name">LunaR</string>
    <string name="menu_drawer_activity">Dashboard</string>
    <string name="menu_drawer_alarm">Alarm</string>
    <string name="menu_drawer_hometime">Digital Time</string>
    <string name="menu_drawer_sleep">Sleep</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_find">Find Watch</string>
    <string name="find_watch_subtitle">press to send a alert-signal to LunaR</string>
    <string name="choose_activity_title_choose_city_tv">Choose a City</string>
    <string name="provider_file_string" translatable="false">com.med.lunar.fileprovider</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="time_able_morning">am</string>
    <string name="time_able_afternoon">pm</string>
    <string name="ble_not_supported">Smartphone does not support BLE</string>
    <string name="ble_deactivated">Bluetooth is turned off, please turn the bluetooth on to make connection.</string>
    <string name="ble_unstable">Bluetooth connection is unstable, please keep the watch closer to the phone.</string>
    <string name="ble_connect_timeout">If connected to the internet, press Help button for solutions</string>
    <string name="ble_notification_title">Notification</string>
    <string name="ble_notification_message">Lunar is not paired, please pair first</string>
    <string name="ble_command_timeout_title">Bluetooth communication timeout</string>
    <string name="ble_connect_timeout_url">https://nevowatch.freshdesk.com/solution/categories/5000086192/folders/5000257648/articles/5000619809-if-you-are-experiencing-intermittent-bluetooth-disconnection-problems-on-android</string>
    <string name="ble_connection_timeout_title">Bluetooth connection timeout</string>
    <string name="ble_connection_timeout_cancel">Cancel</string>
    <string name="ble_connection_timeout_help">Help</string>
    <string name="notification_call_title">Call</string>
    <string name="notification_sms_title">SMS</string>
    <string name="notification_email_title">Email</string>
    <string name="notification_facebook_title">Facebook</string>
    <string name="notification_calendar_title">Calendar</string>
    <string name="notification_wechat_title">WeChat</string>
    <string name="notification_whatsapp_title">WhatsApp</string>
    <string name="location_access_title">This app needs location access</string>
    <string name="dfu_update">Update</string>
    <string name="dfu_back_to_settings">Back to settings</string>
    <string name="dfu_retry">Retry</string>
    <string name="dfu_update_title">Do not exit this screen</string>
    <string name="dfu_update_content">Please follow the instructions and wait until the update has been finished.</string>
    <string name="dfu_update_positive">Update</string>
    <string name="dfu_update_negative">Cancel</string>
    <string name="dfu_update_prepare">Prepare for update&#8230;</string>
    <string name="dfu_firmware_updated">Firmware updated</string>
    <string name="dfu_continue">Continue</string>
    <string name="dfu_back">Finish</string>
    <string name="dfu_press_third_button">Press the third button</string>
    <string name="dfu_press_third_button_description">Don’t exit this screen while reactivating your bluetooth!</string>
    <string name="dfu_failed_preparing">Failed to prepare the update, please restart the BT of lunar or reinstall battery.</string>
    <string name="dfu_re_upgrade">Try again</string>
    <string name="dfu_continue_button">Continue</string>
    <string name="dfu_connect_error_no_nevo_do_ota">lunar isn\'t connected, can\'t perform OTA update</string>
    <string name="dfu_checking_firmware">Checking firmware version, please wait&#8230;</string>
    <string name="dfu_error_lowbattery">Not enough battery to upgrade.</string>
    <string name="dfu_error_timeout">Connection timed out</string>
    <string name="dfu_error_noconnect">No lunar connected</string>
    <string name="dfu_error_openfile">Open Firmware file error.</string>
    <string name="dfu_error_checksum">Checksum error.</string>
    <string name="dfu_error_nofounDFUservice">No OTA service found, please wait for few minutes and try again.</string>
    <string name="dfu_error_other">Couldn\'t update due to an error.</string>
    <string name="dfu_update_message">Updating&#8230;</string>
    <string name="dfu_update_available">An update is available for your watch.</string>
    <string name="notification_allow">Allow Notifications</string>
    <string name="notification">Notification</string>
    <string name="notification_led_red">Red LED</string>
    <string name="notification_led_blue">Blue LED</string>
    <string name="notification_led_light_green">Light green LED</string>
    <string name="notification_led_yellow">Yellow LED</string>
    <string name="notification_led_orange">Orange LED</string>
    <string name="notification_led_green">Green LED</string>
    <string name="notification_position">Position</string>
    <string name="notification_ok">OK</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_deactivated">Inactive</string>
    <string name="notification_access_title">Notification Access</string>
    <string name="notification_choose_color_dialog_title">Notification Color</string>
    <string name="notification_connect_title">Nevo connected</string>
    <string name="notification_connect_content">your Nevo has got connected</string>
    <string name="notification_disconnect_title">Nevo disconnect</string>
    <string name="notification_disconnect_content">your Nevo has got disconnect</string>
    <string name="access_google_fit_message">Are you sure to link your GoogleFit</string>
    <string name="first_access_google_fit">Link GoogleFit</string>
    <string name="first_things_activity_title">First things first</string>
    <string name="tutorial_1_title">Let\'s get started!</string>
    <string name="tutorial_2_title">Turn on Bluetooth</string>
    <string name="tutorial_2_dialog_negative">Settings</string>
    <string name="tutorial_2_dialog_positive">Turn on Bluetooth in the settings to connect with lunar</string>
    <string name="tutorial_3_title">Set time</string>
    <string name="tutorial_3_next">Next</string>
    <string name="tutorial_next_step_text">Next Step</string>
    <string name="tutorial_5_title">Searching</string>
    <string name="tutorial_5_text">Trying to connect with LunaR. Make sure you keep LunaR in reach of your phone!</string>
    <string name="prompt_update_firmware_title_text">Update LunaR</string>
    <string name="prompt_update_firmware_describe_text">A new firmware-version is available.\nUpdate now and be able to use the latest features of LunaR!</string>
    <string name="prompt_update_bt">Update now</string>
    <string name="later_update_bt">or update later</string>
    <string name="tutorial_failed_title">Connection failed</string>
    <string name="tutorial_failed_try_again">Try Again</string>
    <string name="tutorial_success_title">Connected</string>
    <string name="tutorial_success_text">Now let\'s configure LunaR to your preferences. </string>
    <string name="tutorial_success_tap_to_continue">Tap to Continue</string>
    <string name="sleep_sleep_duration">Sleep duration</string>
    <string name="sleep_sleep_time">Sleep time</string>
    <string name="sleep_wake_time">Wake time</string>
    <string name="sleep_deep_sleep">Deep sleep</string>
    <string name="sleep_time">Time</string>
    <string name="sleep_light_sleep">Light sleep</string>
    <string name="sleep_awake">Awake</string>
    <string name="sleep_wake_duration">Wake duration</string>
    <string name="sleep_today_no_sleep_message">You didn\'t sleep with your lunar.</string>
    <string name="sleep_select_date">select a date</string>
    <string name="steps_goal_title">Steps Goal</string>
    <string name="steps_goal">stepsGoal</string>
    <string name="steps_progress">progress</string>
    <string name="steps_steps">steps</string>
    <string name="setting_goal_title">Select Goal</string>
    <string name="edit_goal_time_text">Select Time</string>
    <string name="edit_goal_name">Edit Name</string>
    <string name="sleep_goal_def_weekend">Weekend</string>
    <string name="sleep_goal_def_weekdays">Weekdays</string>
    <string name="sleep_unit_hour">h</string>
    <string name="sleep_unit_minute">min</string>
    <string name="solar_goal_def_long">Long</string>
    <string name="solar_goal_def_short">Short Time</string>
    <string name="startup_goal_light">Light</string>
    <string name="startup_goal_moderate">Moderate</string>
    <string name="startup_goal_heavy">Heavy</string>
    <string name="startup_goal_weekly_days">Weekly days</string>
    <string name="startup_goal_weekend">Weekend</string>
    <string name="alarm_add">Add alarm</string>
    <string name="alarm_saved">Saved alarm!</string>
    <string name="alarm_could_not_save">Could not save alarm!</string>
    <string name="alarm_edit">Edit Alarm</string>
    <string name="alarm_label_alarm">Label your alarm.</string>
    <string name="analysis_fragment_title_string">Analysis</string>
    <string name="first_things_turn_notifications">Turn on Push Notifications</string>
    <string name="first_things_access_location">Allow Access to Location</string>
    <string name="first_things_access_google_fit">Allow Access to Google Fit</string>
    <string name="first_things_activity_describe">To get the most out of LunaR</string>
    <string name="first_things_button_text">Let\'s get started</string>
    <string name="first_things_activity_sub_describe">please grant the following permissions:</string>
    <string name="cancel_update">Cancel</string>
    <string name="ready_update_describe_title">Please note</string>
    <string name="ready_update_to_update_button_tv">Got it,update my LunaR</string>
    <string name="ready_update_describe_subtitle">You are about to update the firmware of your LunaR watch.</string>
    <string name="update_watch_firmware_careful_one">- Keep LunaR close to your phone.</string>
    <string name="update_watch_firmware_careful_second">- Don\'t turn off the bluetooth  </string>
    <string name="update_watch_firmware_careful_third">Don\'t press and buttons on LunaR while upgrading</string>
    <string name="add_new_activity_goal_fb">Activity goal</string>
    <string name="add_new_inactivity_goal_fb">Inactivity goal</string>
    <string name="and_new_sunshine_fb">Sunshine goal</string>
    <string name="snack_title">Actions</string>
</resources>