<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:paddingTop="24dp"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack_title"
        android:paddingLeft="16dp"
        android:textColor="@color/more_setting_sub_text_color"
        android:textSize="16sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/more_setting_add_new_activity"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:text="@string/add_new_activity_goal_fb"
        android:drawablePadding="30dp"
        android:paddingLeft="16dp"
        android:drawableLeft="@drawable/ic_icon_activity"
        android:textColor="@color/list_item_sub_text"
        android:textAllCaps="false"
        android:textSize="16sp"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/more_setting_add_new_inactivity"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:text="@string/add_new_inactivity_goal_fb"
        android:drawablePadding="30dp"
        android:paddingLeft="16dp"
        android:drawableLeft="@drawable/moon_icon"
        android:drawableTint="#727272"
        android:textColor="@color/list_item_sub_text"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/more_setting_add_new_sunshine"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:text="@string/and_new_sunshine_fb"
        android:drawablePadding="30dp"
        android:paddingLeft="16dp"
        android:drawableLeft="@drawable/sun_white"
        android:drawableTint="#727272"
        android:textColor="@color/list_item_sub_text"
        android:textAllCaps="false"
        android:textSize="16sp"/>
</LinearLayout>