<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/text_color"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack_title"
        android:textColor="@color/more_setting_sub_text_color"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/more_setting_action_edit"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_snackbar_action_edit"
        android:drawablePadding="33dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_notification_item_name"
        android:textColor="@color/list_item_sub_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/more_setting_action_delete"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="start|center_vertical"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_snackbar_edit_delete"
        android:drawablePadding="33dp"
        android:textAllCaps="false"
        android:text="@string/edit_notification_delete_item"
        android:textColor="@color/list_item_sub_text"
        android:textSize="16sp"
        />
</LinearLayout>