<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:paddingTop="5dp"
        android:paddingLeft="16dp"
        android:text="@string/setting_goal_title"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/white">

        <com.medcorp.lunar.view.PickerView
            android:id="@+id/hour_pv"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:textColor="@color/user_sex_text_normal_color"/>

        <TextView
            android:id="@+id/minute_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/hour_pv"
            android:text="@string/sleep_unit_hour"
            android:background="@color/white"
            android:textColor="@color/user_sex_text_normal_color"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.medcorp.lunar.view.PickerView
            android:id="@+id/minute_pv"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/minute_tv"
            android:textColor="@color/user_sex_text_normal_color"/>

        <TextView
            android:id="@+id/second_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/minute_pv"
            android:text="@string/sleep_unit_minute"
            android:textColor="@color/user_sex_text_normal_color"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/select_time_cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel_update"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/select_time_select_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/notification_ok"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="20dp"
            />
    </LinearLayout>
</LinearLayout>